Add provider_id to User
